Frontend - Google Sign-In

--- a/07-restserver/public/index.html
+++ b/07-restserver/public/index.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acceso denegado</title>
+    <title>Google Sign-In</title>
 </head>
 <body>
-    <h1>Acesso Denegado</h1>
+    <h1>Google Sign-In</h1>
+    <hr />
+
+    <div id="g_id_onload"
+        data-client_id="135915633284-4hrr9os5b4t9ga5qnf2drtesf0e6a684.apps.googleusercontent.com"
+        data-auto_prompt="false"
+        data-callback="handleCredentialResponse">
+    </div>
+    <div class="g_id_signin"
+        data-size="large"
+        data-theme="outline"
+        data-text="sign_in_with"
+        data-type="standard"
+        data-shape="rectangular"
+        data-logo_alignment="left">
+    </div>
+    <div id="buttonDiv"></div> 
+
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script>
+        function handleCredentialResponse(response) {
+
+            //Google Token : ID_TOKEN
+            console.log('id_token', response.credential);
+        }
+      </script>
 </body>
 </html>
