--- a/07-restserver/public/index.html
+++ b/07-restserver/public/index.html
@@ -24,6 +24,10 @@
         data-logo_alignment="left">
     </div>
     <div id="buttonDiv"></div> 
+    <button id="google_signout">
+        Sign Out
+    </div>
+
 
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script>
@@ -41,8 +45,18 @@
             }).then( resp => resp.json())
                 .then( resp => {
                     console.log(resp);
+                    localStorage.setItem('email', resp.user.email);
                 })
                 .catch( console.warn );
+        }
+
+        const button = document.getElementById('google_signout');
+        button.onclick = () => {
+            google.accounts.id.disableAutoSelect()
+            google.accounts.id.revoke(localStorage.getItem('email'), done => {
+                localStorage.clear();
+                location.reload();
+            })
         }
       </script>
 </body>
