--- a/08-websocket-server/public/index.html
+++ b/08-websocket-server/public/index.html
@@ -9,10 +9,16 @@
 
 </head>
 <body class="container">
-   <h1 class="mt-2">Socket Client</h1> 
-   <hr />
+    <h1 class="mt-2">Socket Client</h1> 
+    <hr />
+
+    <p>
+        Server Status:
+        <span id="lblOnline" class="text-success">Online</span>
+        <span id="lblOffline" class="text-danger">Offline</span>
+
 
     <script src="./socket.io/socket.io.js"></script>
-   <script src="./js/socket-client.js"></script>
+    <script src="./js/socket-client.js"></script>
 </body>
 </html>
