--- a/08-websocket-server/public/index.html
+++ b/08-websocket-server/public/index.html
@@ -16,7 +16,18 @@
         Server Status:
         <span id="lblOnline" class="text-success">Online</span>
         <span id="lblOffline" class="text-danger">Offline</span>
+    </p>
 
+    <div class="row">
+        <div class="col">
+            <input type="text" id="txtMessage" class="form-control" />
+        </div>
+        <div class="col">
+            <button id="btnSend" class="btn btn-primary">
+                Enviar
+            </button>
+        </div>    
+    </div>
 
     <script src="./socket.io/socket.io.js"></script>
     <script src="./js/socket-client.js"></script>
