--- a/09-socket-colas/public/new-ticket.html
+++ b/09-socket-colas/public/new-ticket.html
@@ -16,7 +16,7 @@
     <table>
         <tr>
             <td>
-                <span id="lblNuevoTicket">
+                <span id="lblNewTicket">
                     Cargando...
                 </span>
             </td>
@@ -30,7 +30,7 @@
         </tr>
     </table>
 
-
+    <script src="./socket.io/socket.io.js"></script>
     <script src="./js/new-ticket.js"></script>
 
 </body>
