--- a/09-socket-colas/public/index.html
+++ b/09-socket-colas/public/index.html
@@ -24,7 +24,7 @@
         <div class="col-6">
             <form action="desktop.html">
 
-                <input name="escritorio" 
+                <input name="desktop" 
                        type="text" 
                        class="form-control" 
                        placeholder="Escritorio" 
