--- a/09-socket-colas/public/desktop.html
+++ b/09-socket-colas/public/desktop.html
@@ -29,7 +29,7 @@
                 <span>Ya no hay más tickets</span>
             </div>
 
-            <h1 id="lblPendientes">10</h1>
+            <h1 id="lblPending"></h1>
         </div>
     </div>
 
