UI Login and set token in localStorage

--- a/10-socket-chat/public/index.html
+++ b/10-socket-chat/public/index.html
@@ -30,10 +30,19 @@
             <div id="buttonDiv"></div> 
             <button id="google_signout">
                 Sign Out
-            </div>
+            </button>
         </div>
         <div class="col-sm-6">
-
+            <h1>Login</h1>
+            </hr>
+            <form class="d-grid">
+                <input type="text" name="email" class="form-control mb-2"/>
+                <input type="password" name="password" class="form-control mb-2"/>
+                
+                <button type="submit" class="btn btn-primary">
+                    Ingresar
+                </button>
+            </form>
         </div>
     </div>
 
@@ -41,37 +50,6 @@
 
 
     <script src="https://accounts.google.com/gsi/client" async defer></script>
-    <script>
-        function handleCredentialResponse(response) {
-            
-            //Google Token : ID_TOKEN
-            // console.log('id_token', response.credential);
-            const body = { id_token: response.credential };
-            const url = (window.location.hostname.includes('localhost')) 
-                        ? 'http://localhost:8081'
-                        : 'https://curso-node-restserver-tj.herokuapp.com';
-            fetch(`${ url }/api/auth/google`,  {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(body)
-            }).then( resp => resp.json())
-                .then( resp => {
-                    console.log(resp);
-                    localStorage.setItem('email', resp.user.email);
-                })
-                .catch( console.warn );
-        }
-
-        const button = document.getElementById('google_signout');
-        button.onclick = () => {
-            google.accounts.id.disableAutoSelect()
-            google.accounts.id.revoke(localStorage.getItem('email'), done => {
-                localStorage.clear();
-                location.reload();
-            })
-        }
-      </script>
+    <script src="./js/auth.js"></script>
 </body>
 </html>
