--- a/12-project-chat/public/index.html
+++ b/12-project-chat/public/index.html
@@ -12,6 +12,16 @@
     <h1>Chat</h1>
 
 
+    <form action="chat.html">
+        <input type="text" name="name" placeholder="nombre" />
+        <input type="text" name="room" placeholder="sala" />
+
+        <button type="submit">
+            Acceder
+        </button>
+    </form>
+
+
 </body>
 
 </html>
